--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,23 @@
 {
   "version": 2,
   "builds": [
-    { "src": "client/package.json", "use": "@vercel/static-build" },
-    { "src": "api/**/*.js", "use": "@vercel/node" }
+    {
+      "src": "client/package.json", 
+      "use": "@vercel/static-build"
+    },
+    {
+      "src": "api/index.js", 
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*)", "dest": "/client/$1" }
+    {
+      "src": "/api/(.*)", 
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/(.*)", 
+      "dest": "/client/$1"
+    }
   ]
 }
